@@ -263,11 +263,32 @@ class BarclaycardSmartpayTest < Test::Unit::TestCase
     response = stub_comms do
       @gateway.credit(@amount, @credit_card, @options_with_credit_fields)
     end.check_request do |endpoint, data, headers|
+      assert_match(%r{/refundWithData}, endpoint)
       assert_match(/dateOfBirth=1990-10-11&/, data)
       assert_match(/entityType=NaturalPerson&/, data)
       assert_match(/nationality=US&/, data)
       assert_match(/shopperName.firstName=Longbob&/, data)
     end.respond_with(successful_credit_response)
+
+    assert_success response
+    assert response.test?
+  end
+
+  def test_successful_third_party_payout
+    response = stub_comms do
+      @gateway.credit(@amount, @credit_card, @options_with_credit_fields.merge({third_party_payout: true}))
+    end.check_request do |endpoint, data, headers|
+      if /storeDetailAndSubmitThirdParty/ =~ endpoint
+        assert_match(%r{/storeDetailAndSubmitThirdParty}, endpoint)
+        assert_match(/dateOfBirth=1990-10-11&/, data)
+        assert_match(/entityType=NaturalPerson&/, data)
+        assert_match(/nationality=US&/, data)
+        assert_match(/shopperName.firstName=Longbob&/, data)
+        assert_match(/recurring\.contract=PAYOUT/, data)
+      else
+        assert_match(/originalReference=/, data)
+      end
+    end.respond_with(successful_payout_store_response, successful_payout_confirm_response)
 
     assert_success response
     assert response.test?
@@ -378,6 +399,14 @@ class BarclaycardSmartpayTest < Test::Unit::TestCase
 
   def successful_credit_response
     'fraudResult.accountScore=70&fraudResult.results.0.accountScore=20&fraudResult.results.0.checkId=2&fraudResult.results.0.name=CardChunkUsage&fraudResult.results.1.accountScore=25&fraudResult.results.1.checkId=4&fraudResult.results.1.name=HolderNameUsage&fraudResult.results.2.accountScore=25&fraudResult.results.2.checkId=8&fraudResult.results.2.name=ShopperEmailUsage&fraudResult.results.3.accountScore=0&fraudResult.results.3.checkId=1&fraudResult.results.3.name=PaymentDetailRefCheck&fraudResult.results.4.accountScore=0&fraudResult.results.4.checkId=13&fraudResult.results.4.name=IssuerRefCheck&fraudResult.results.5.accountScore=0&fraudResult.results.5.checkId=15&fraudResult.results.5.name=IssuingCountryReferral&fraudResult.results.6.accountScore=0&fraudResult.results.6.checkId=26&fraudResult.results.6.name=ShopperEmailRefCheck&fraudResult.results.7.accountScore=0&fraudResult.results.7.checkId=27&fraudResult.results.7.name=PmOwnerRefCheck&fraudResult.results.8.accountScore=0&fraudResult.results.8.checkId=56&fraudResult.results.8.name=ShopperReferenceTrustCheck&fraudResult.results.9.accountScore=0&fraudResult.results.9.checkId=10&fraudResult.results.9.name=HolderNameContainsNumber&fraudResult.results.10.accountScore=0&fraudResult.results.10.checkId=11&fraudResult.results.10.name=HolderNameIsOneWord&fraudResult.results.11.accountScore=0&fraudResult.results.11.checkId=21&fraudResult.results.11.name=EmailDomainValidation&pspReference=8514743049239955&resultCode=Received'
+  end
+
+  def successful_payout_store_response
+    'pspReference=8815391117417347&resultCode=%5Bpayout-submit-received%5D'
+  end
+
+  def successful_payout_confirm_response
+    'pspReference=8815391117421182&response=%5Bpayout-confirm-received%5D'
   end
 
   def failed_credit_response
